<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/lightgray">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/appTitle"
        android:layout_centerHorizontal="true"
        android:text="@string/app_title"
        android:textColor="@color/bluegray"
        android:textAllCaps="true"
        android:textSize="22dp"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/spotify_button"
        android:textColor="@color/white"
        android:background="@color/teal"
        android:id="@+id/spotifyButton"
        android:layout_below="@+id/appTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="buttonOnClick"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/scores_button"
        android:textColor="@color/white"
        android:background="@color/teal"
        android:id="@+id/scoresButton"
        android:layout_below="@+id/spotifyButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="buttonOnClick"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/library_button"
        android:textColor="@color/white"
        android:background="@color/teal"
        android:id="@+id/libraryButton"
        android:layout_below="@+id/scoresButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="buttonOnClick"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/bigger_button"
        android:textColor="@color/white"
        android:background="@color/teal"
        android:id="@+id/biggerButton"
        android:layout_below="@+id/libraryButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="buttonOnClick"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/xyz_button"
        android:textColor="@color/white"
        android:background="@color/teal"
        android:id="@+id/xyzButton"
        android:layout_below="@+id/biggerButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="buttonOnClick"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/capstone_button"
        android:textColor="@color/white"
        android:background="@color/bluegray"
        android:id="@+id/capstoneButton"
        android:layout_below="@+id/xyzButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="buttonOnClick"/>
</RelativeLayout>
